# AcademiaTrack

./: .gitignore  AGENTS.md  App.tsx  CALL_CHAIN_PERSISTENCE.md  CHANGELOG.md  CLAUDE.md  COMMUNITY_MAP_SUBSYSTEM.md  IMPLEMENTATION_STATUS.md  LICENSE  OWNERSHIP_INVENTORY.md  POWER_USER_AUDIT_REPORT.md  README.md  SECURITY.md  SIGNING.md  build-profile.json  build-timings.json  constants.ts  constants.ts_snippet  electrobun.config.ts  index.css  index.html  index.tsx  log-analysis-report.md  metadata.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test_dates.ts  test_issue.ts  tsc_output.txt  tsconfig.json  types.ts  utils.ts  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: release-notes.md
assets/: entitlements.mac.plist  icon.icns
components/: AIAssistantModal.tsx  AISettingsPanel.tsx  AdvancedAnalyticsPanel.tsx  AdvancedFilterBuilder.tsx  AdvancedSearchBar.tsx  ApplicationCard.tsx  ApplicationFormUI.tsx  ApplicationList.tsx  ApplicationModal.tsx  AutoCompleteInput.tsx  AutomationRuleBuilder.tsx  AutomationRulesModal.tsx  BudgetView.tsx  BulkActionsBar.tsx  BulkOperationsModal.tsx  CalendarView.tsx  ColumnConfigModal.tsx  CommandPalette.tsx  ComparisonModal.tsx  ComparisonView.tsx  ConfirmationModal.tsx  ContextMenu.tsx  CustomFieldsSection.tsx  DashboardAIBriefing.tsx  DashboardSummary.tsx  DataValidationPanel.tsx  DateInput.tsx  DocumentsSection.tsx  Header.tsx  (+36 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+165 files in other folders)
