[package]
name = "academia-track"
version = "5.5.0"
description = "Academic Application Tracker"
authors = ["BHARATH CHANDRA VADDARAM <bharath.vbcr@gmail.com>"]
license = ""
repository = "https://github.com/bharathvbcr/AcademiaTrack"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "academia_track_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-log = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
